--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "github-latest-hashnode-posts",
+	"packageManager": "pnpm@10.26.2",
 	"version": "0.0.1",
 	"description": "Updates your README with the latest posts one of your Hashnode publications.",
 	"main": "src/index.js",
